# tesseract_ocr

./: .gitignore  README.md  pyproject.toml
script/: tesseract.py
