[tool.poetry]
name = "tesseract"
version = "0.1.0"
description = ""
authors = ["KonstantinVK <bmstu.konovalov2011@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
click = "^8.0.1"
pytesseract = "^0.3.8"
pdf2image = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
